--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirement.txt
 
-      - name: execute py script # run the python script
+      - name: execute py script # run extract_pdf.py
+        env:
+          account_name: ${{ secrets.SOME_SECRET }}
+          account_key: ${{ secrets.SOME_SECRET }}
         run: python extract_pdf.py
